--- a/hotel_service/src/main/resources/application.properties
+++ b/hotel_service/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=hotel_service
+grpc.server.port=9090
 
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel_db
 spring.datasource.username=root
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 
-server.port=8080
+
 
