--- a/agency/src/main/resources/application.properties
+++ b/agency/src/main/resources/application.properties
@@ -1,9 +1,28 @@
+# Nom de l'application
 spring.application.name=agency
-grpc.server.port=9091
 
+# Configuration de la base de données MySQL pour l'agence
 spring.datasource.url=jdbc:mysql://localhost:3306/agence_db
 spring.datasource.username=root
 
-
+# JPA Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Port gRPC du serveur Hotel Service (appelé depuis Agency)
+grpc.client.hotelService.address=static://localhost:9090
+grpc.client.hotelService.plaintext=true
+
+
+grpc.client.availability-service.address=static://localhost:9090
+grpc.client.availability-service.plaintext=true
+grpc.client.availability-service.enable-keep-alive=true
+grpc.client.availability-service.negotiation-type=plaintext
+
+grpc.client.reservation-service.address=static://localhost:9090
+grpc.client.reservation-service.plaintext=true
+grpc.client.reservation-service.enable-keep-alive=true
+grpc.client.reservation-service.negotiation-type=plaintext
+
+# Port de l'Agency pour permettre d'autres interactions
+server.port=9091
